<resources>
    <string name="app_name">NanoHome</string>
    <string name="action_settings">Settings</string>
    <string name="home_text">My Nanogrees Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>
</resources>
