<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        >

        <TextView android:text="@string/home_text" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="24dp"
            android:id="@+id/welcomeText"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer"
            android:background="#F08C35"
            android:layout_marginBottom="16dp"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scores_app"
            android:background="#F08C35"
            android:layout_marginBottom="16dp"
            />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library_app"
            android:background="#F08C35"
            android:layout_marginBottom="16dp"
            />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger"
            android:background="#F08C35"
            android:layout_marginBottom="16dp"
            />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader"
            android:background="#F08C35"
            android:layout_marginBottom="16dp"
            />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:background="#E91E63"
            android:layout_marginBottom="16dp"
            />

    </LinearLayout>

</RelativeLayout>
